--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <!--Splash screen theme. -->
+    <style name="AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/ic_launcher_background</item>
+    </style>
+
+    <style name="AppTheme.CameraCutout" parent="AppTheme.NoActionBar">
+        <item name="android:windowBackground">@drawable/scanner_background</item>
+    </style>
+
 </resources>
