--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,8 @@
     <!--Splash screen theme. -->
     <style name="AppTheme.Launcher">
         <item name="android:windowBackground">@drawable/ic_launcher_background</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="AppTheme.CameraCutout" parent="AppTheme.NoActionBar">
