--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Log In"
+        android:id="@+id/login_button" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
